<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <uk.ac.reading.cs2ja16.GameView
        android:id="@+id/gamearea"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <RelativeLayout
        android:id="@+id/gameLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#000000">

        <Button
            android:id="@+id/backbuttonHowToPlay"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/buttonborder"
            android:text="@string/back_button"
            android:textColor="#ffffffff"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/HowToPlayTitle"
            android:layout_width="wrap_content"
            android:layout_height="67dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/pcmanfont"
            android:gravity="center"
            android:text="@string/howtoplay_title"
            android:textColor="#FFFFFF"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/HowToPlayText"
            android:layout_width="wrap_content"
            android:layout_height="237dp"
            android:layout_below="@+id/HowToPlayTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
            android:fontFamily="@font/pcmanfont"
            android:text="@string/howtoplay_text"
            android:textColor="#FFFFFF" />
    </RelativeLayout>
</FrameLayout>
